# app_with_lib_template

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp  main_app1.cpp  main_app2.cpp
include/mymath/: my_math.h
src/: CMakeLists.txt  my_math.cpp
tests/: CMakeLists.txt  mymath_test.cpp
